[package]
name = "pdvzip"
version = "4.3.0"
edition = "2024"
authors = ["Nicholas Cleasby (@CleasbyCode)"]
description = "PNG Data Vehicle ZIP/JAR Edition - Embed ZIP/JAR within PNG images"

[dependencies]
png = "0.17"
crc32fast = "1"
rand = "0.9"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
